# bcn-2024-system

./: README.md  mmt_reqs.txt  myk_mmt_notes.md  notes.md  paper-notes.md  training_notes.md
Multitrack-Music-Transformer/mmt/: generate.py  music_x_transformers.py  representation.py  train.py
analysis/: midi_folder_to_wavs.sh  wav_folder_to_movie.py
dataset-processors/: TMIDIX.py  data_key_expander.py  expand_data_to_many_keys.py  key_fix_parallel.py  make_la_dataset.py  make_la_dataset_clean.py
mmt/mmt/: extract.py
skytnt-midi-model/: README.md  llama_music.ipynb
skytnt-midi-model/midi-model-1.1.0/: export_myk.py  midi_model.py
skytnt-midi-model/midi-model-works/: app.py  app_onnx.py  export.py  skytnt_reqs.txt  train.py
skytnt-realtime/: README.md
skytnt-realtime/cpp/cpp-model-loader/: CMakeLists.txt  CoreMLModelWrapper.h  CoreMLModelWrapper.mm  main.cpp
skytnt-realtime/cpp/minimal-model-loader/: CMakeLists.txt  README.md  main.mm  newmodel.h  newmodel.m
skytnt-realtime/cpp/tokenizer-and-base/: CMakeLists.txt  CoreMLModelWrapper.h  CoreMLModelWrapper.mm  base.h  base.m  tokenizer.h  tokenizer.m
skytnt-realtime/python/: coreml_speed.py  coreml_test.py  export_to_coreml.py  export_to_coreml_separate.py  gen_live.py  gen_live_web.py  gen_multi_from_midi_prompt.py  gen_onnx.py  gen_random.py  gen_torch.py  gen_utils.py  genearte_continue_file.py  generate_onnx.py  generate_torch.py  midi_model.py  midi_tokenizer.py  test_dash.py  test_gen.py  test_midi.py  test_ring.py  torch_speed.py
skytnt-realtime/python-20241010-mark/: README.md  gen_live.py  gen_live_web.py  gen_utils.py  midi_tokenizer.py  test_midi.py
skytnt-realtime/python-20241023-finn/: README.md  export_to_coreml_separate.py  gen_utils.py  gen_utils.pyBAK  gen_utils.pyTESTING  midi_model.py  test_dash.py  test_instruments.py  test_ring.py  test_shifter.py  threaded_array.py
skytnt-trainer/: midi_model.py  train.py
